<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.activityMain">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="activities.activityMain"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/activityConfigTitleDriver"
            android:layout_margin="5dp"
            android:textAlignment="center"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/activityConfigLabelNewDriver"
            android:layout_margin="5dp" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityConfigLabelFirstName"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/editTextFirstName"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityConfigLabelLastName"
                android:layout_weight="1"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/editTextLastName"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityConfigButtonInsertNewDriver"
            android:textSize="16sp"
            android:onClick="buttonInsertDriverOnClick"
            android:layout_marginLeft="5dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/activityConfigLabelDriverList"
            android:layout_margin="5dp" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewDrivers"></ListView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/activityConfig.Title.Cars"
            android:layout_margin="5dp"
            android:textAlignment="center"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/activityConfig.Label.NewCar"
            android:layout_margin="5dp" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/activityConfig.Label.Model" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/editTextModel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/activityConfig.Label.Mileage" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/editTextMileage"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/activityConfig.Button.InsertNewCar"
            android:onClick="buttonInsertCarOnClick" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewCars"></ListView>
    </LinearLayout>
</ScrollView>